# godzilla_stroy_point

./: Makefile  README.md  pyproject.toml
secrets/: toggl_token.py
src/: config.py  main.py  secrets.py  utils.py
src/models/: jira.py
src/services/: jira.py  toggl.py
src/stats/: __init__.py  my_dict.py  project_stats.py  task_stats.py
tools/: gen_jira_token.py  generate_authorization.py
