[project]
name = "godzilla-stroy-point"
version = "0.1.0"
description = "Add a short description here"
dependencies = [
    "requests~=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black~=23.11.0",
    "ruff~=0.1.7",
]

[tool.hatch.metadata]
allow-direct-references = true
